minikube/mysql-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-mysql
spec:
  selector:
    matchLabels:
      app: project-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: project-mysql
    spec:
      containers:
      - image: mysql:8.1.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          requests: 
            cpu: 300m
            memory: 300Mi
          limits: 
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: project-mysql
spec:
  ports:
  - port: 3306
  selector:
    app: project-mysql
