minikube/project-backend-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend-user
spec:
  selector:
    matchLabels:
      app: project-backend-user
  replicas: 1
  template:
    metadata:
      labels:
        app: project-backend-user
    spec:
      containers:
        - name: project-backend-user
          image: project-backend-user:1.0.0
          ports:
            - containerPort: 10002
          resources:
            requests: 
              cpu: 100m
              memory: 100Mi
            limits: 
              cpu: 200m
              memory: 200Mi
---

apiVersion: v1
kind: Service
metadata:
  name: project-backend-user
spec:
  selector:
    app: project-backend-user
  ports:
    - protocol: "TCP"
      port: 10002
      targetPort: 10002
  type: ClusterIP
