minikube/project-backend-user-golang-deployment.yaml
apiVersion : v1
kind : ConfigMap
metadata:
  name : project-backend-user-golang-config-map
data:
  applicationPort : "10002"
  applicationTimeout: "5"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend-user-golang
spec:
  selector:
    matchLabels:
      app: project-backend-user-golang
  replicas: 1
  template:
    metadata:
      labels:
        app: project-backend-user-golang
    spec:
      containers:
        - name: project-user
          image: project-user:1.0.0
          ports:
            - containerPort: 10002
---

apiVersion: v1
kind: Service
metadata:
  name: project-backend-user-golang
spec:
  selector:
    app: project-backend-user-golang
  ports:
    - protocol: "TCP"
      port: 10002
      targetPort: 10002
  type: ClusterIP
