minikube/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-redis
  template:
    metadata:
      labels:
        app: project-redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        resources:
          requests: 
            cpu: 100m
            memory: 100Mi
          limits: 
            cpu: 200m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: project-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      # nodePort: 30379  # Choose a port that is free in your machine
  selector:
    app: project-redis
